--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
         </activity>
         <activity android:name=".CameraActivity">
         </activity>
+        <activity android:name=".GoogleBookResultsActivity">
+        </activity>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET">
+    </uses-permission>
 
 </manifest>
