--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/c2clogo"
-        android:label=""
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:label="cover2cover"
+        android:roundIcon="@drawable/c2csmall"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data
@@ -24,8 +23,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".CameraActivity">
-        </activity>
-        <activity android:name=".GoogleBookResultsActivity">
         </activity>
         <activity android:name=".BarcodeCaptureActivity"
             android:label="Read Barcode"/>
